# database-stream-processor

./: .gitignore  Cargo.toml
.github/workflows/: bench.yml  main.yml
benches/: persistence.rs
benches/nexmark/: main.rs  run_queries.rs
criterion-2022-07-22/reports/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek skewed Random/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek skewed Random/16777216/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek skewed Random/4096/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek skewed Random/DRAM/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek skewed Random/Persistent/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek uniform Random/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek uniform Random/16777216/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek uniform Random/4096/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek uniform Random/DRAM/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Seek uniform Random/Persistent/: index.html
criterion-2022-07-22/reports/OrdZSet Cursor Sequential Walk/: index.html
criterion-2022-07-22/reports/OrdZSetBuilder/: index.html
examples/: stonks.rs
scripts/: ci.bash  iostat.csv  swap_dbsp.sh  tput.py
src/: lib.rs
src/algebra/: floats.rs
src/nexmark/: config.rs
src/operator/aggregate/: mod.rs
src/trace/: mod.rs
src/trace/ord/: mod.rs
src/trace/ord/persistent/: Qs.md  (+4 more)
src/trace/persistence/: mod.rs
src/trace/persistent/: mod.rs  trace.rs
(+56 files in other folders)
