[package]
name = "dbsp"
version = "0.1.0"
edition = "2021"

[features]
default = ["with-serde"]
with-serde = ["serde"]
with-csv = ["csv"]

[dependencies]
num = "0.4.0"
string-builder = "0.2.0 "
petgraph = "0.6.0"
typedmap = { version = "0.2.0", features = ["dashmap"] }
crossbeam-utils = "0.8.6"
once_cell = "1.9.0"
priority-queue = "1.2.1"
hashbrown = "0.12.0"
csv = { version = "1.1", optional = true }
serde = { version = "1.0", optional = true }
impl-trait-for-tuples = "0.2"
deepsize = "0.2.0"
deepsize_derive = "0.1.2"
textwrap = "0.15.0"
memmap2 = "0.5.4"
static_assertions = "1.1.0"
log = "0.4.17"
env_logger = "0.9.0"
memoffset = { version = "0.6.5", features = ["unstable_const"] }

# TODO: eliminate dependency on timely-dataflow by cloning relevant
# parts.
timely = "0.12.0"

[[bench]]
name = "galen"
harness = false
required-features = ["with-csv"]

[[bench]]
name = "path"
harness = false
